--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -16,7 +17,7 @@
         android:textAlignment="center"/>
 
     <EditText
-        android:id="@+id/etUser"
+        android:id="@+id/EtUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
@@ -26,8 +27,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ingresar Contraseña"
+        android:text="contraseña"
         android:textAlignment="center"/>
+    <EditText
+        android:id="@+id/EtPass1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="93dp"
+        android:hint="Contraseña123"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,7 +47,7 @@
         android:layout_marginRight="10dp">
 
         <EditText
-            android:id="@+id/EtPass"
+            android:id="@+id/EtPass2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -51,12 +60,6 @@
             android:layout_height="wrap_content"
             android:text="Mostrar"/>
     </LinearLayout>
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="recordar Usuario"
-        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
