--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,7 +7,9 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar_layout" />
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_layout"/>
 
     <TextView
         android:layout_width="match_parent"
