Se Añade Funcionalidad de Retorno a pantalla de Login en Base a la Rama "Funcionalidad-Login" - El retorno al login tambien guarda el nombre de Usuario, en el caso en el que haya escrito algo. Signed-off-by: Elias Ricarte <elias.ricarte@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,18 +3,22 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_layout"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20mm"
+        android:layout_marginTop="100dp"
         android:text="ingresar Nombre"
         android:textAlignment="center"/>
 
     <EditText
-        android:id="@+id/EtUser"
+        android:id="@+id/etUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
@@ -30,10 +34,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
         android:layout_marginLeft="50dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/EtPass"
@@ -44,7 +48,7 @@
             android:inputType="textPassword"/>
 
         <CheckBox
-            android:id="@+id/CbMostrar"
+            android:id="@+id/cbMostrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mostrar"/>
@@ -54,20 +58,23 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="recordar Usuario"
-        />
+        android:id="@+id/cbRecordarUsuario"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp">
+        android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btnIniciar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Iniciar Sesión"/>
 
         <Button
+            android:id="@+id/btnRegistrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
