--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="1"
+
 
     >
 
@@ -12,23 +12,44 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_nombre"
         android:layout_margin="4dp"
-        android:layout_weight="0.5"
 
+        android:background="@color/design_default_color_primary"
+        android:textColor="@color/white"
         />
 
-    <TextView
-        android:layout_width="match_parent"
+
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_stock"
-        android:layout_margin="4dp"
-        android:layout_weight="0.5"
-
-        />
+        android:orientation="horizontal">
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+
+            android:text="Stock Disponible: "
+            android:background="@color/design_default_color_primary"
+            android:textColor="@color/white"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_stock"
+            android:layout_margin="4dp"
+
+            android:background="@color/design_default_color_primary"
+            android:textColor="@color/white"
+            />
 
 
 
+
+    </LinearLayout>
 
 
 </LinearLayout>
