Se añade otra activity; funcionalidades basicas de menu

--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -43,7 +43,7 @@
             android:layout_margin="4dp"
 
             android:background="@color/fondoApp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             />
 
 
