--- a/app/src/main/res/menu/primer_menu.xml
+++ b/app/src/main/res/menu/primer_menu.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
+
+
     >
 
 
@@ -10,7 +12,7 @@
     <item
         android:id="@+id/idItemAgregar"
         android:title="Agregar producto"
-        
+        android:textColor="@android:color/black"
 
         app:showAsAction="never" />
 
@@ -19,6 +21,10 @@
     <item
         android:id="@+id/idItemSalir"
         android:title="Cerrar sesión"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:textColor="@android:color/black"
+
+
+        />
 
 </menu>
