--- a/app/src/main/res/menu/primer_menu.xml
+++ b/app/src/main/res/menu/primer_menu.xml
@@ -14,14 +14,14 @@
         android:title="Agregar producto"
         android:textColor="@android:color/black"
 
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
 
 
     <item
         android:id="@+id/idItemSalir"
         android:title="Cerrar sesión"
-        app:showAsAction="never"
+        app:showAsAction="always"
         android:textColor="@android:color/black"
 
 
