--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="93dp"
+        android:inputType="textPassword"
         android:hint="Contraseña123"/>
 
 
