--- a/app/src/main/res/layout/activity_opciones_generales.xml
+++ b/app/src/main/res/layout/activity_opciones_generales.xml
@@ -70,6 +70,15 @@
 
       />
 
+  <Button
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/btnPelisCompradas"
+      android:text="Peliculas Compradas"
+      android:textSize="20dp"
+      android:layout_marginHorizontal="40dp"/>
+
+
 
   <Button
       android:layout_width="match_parent"
