Fragmentos -> Estructura hecha sin implementar Se sacó la lista de productos de las opciones generales, no se borraron aún

--- a/app/src/main/res/layout/activity_opciones_generales.xml
+++ b/app/src/main/res/layout/activity_opciones_generales.xml
@@ -48,27 +48,24 @@
         />
   </LinearLayout>
 
-<Button
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/btnListaStock"
-    android:text="Lista de Productos"
-    android:textSize="20dp"
-    android:layout_marginHorizontal="40dp"
-
-
-    />
 
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/btnListaPeliculas"
-      android:text="Lista de Peliculas"
+      android:text="Peliculas Disponibles"
       android:textSize="20dp"
       android:layout_marginHorizontal="40dp"
 
 
       />
+
+
+
+
+
+
+
 
 
   <Button
