--- a/app/src/main/res/menu/primer_menu.xml
+++ b/app/src/main/res/menu/primer_menu.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
-
     >
+
 
 
 
@@ -13,17 +11,15 @@
         android:id="@+id/idItemAgregar"
         android:title="Agregar producto"
         android:textColor="@android:color/black"
-        app:showAsAction="always" />-->
+        app:showAsAction="always"/>-->
 
 
 
-    <item
-        android:id="@+id/idItemSalir"
-        android:title="Volver"
-        app:showAsAction="always"
-        android:textColor="@android:color/black"
-
-
-        />
+<!--    <item-->
+<!--        android:id="@+id/idItemSalir"-->
+<!--        android:title="Volver"-->
+<!--        app:showAsAction="always"-->
+<!--        android:textColor="@android:color/black"-->
+<!--        />-->
 
 </menu>
