--- a/app/src/main/res/layout/activity_opciones_generales.xml
+++ b/app/src/main/res/layout/activity_opciones_generales.xml
@@ -64,7 +64,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/btnPelisCompradas"
-      android:text="Peliculas Compradas"
+      android:text="Mis Peliculas"
       android:textSize="20dp"
       android:layout_marginHorizontal="40dp"/>
 
